<resources>
    <string name="app_name">BoYueLauncher</string>
    <string name="hht">火火兔</string>
    <string name="ignore">忽略</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="total_cache">共清理掉垃圾:</string>
    <string name="go">去启用</string>
    <string name="know">知道了</string>
    <string name="connected">已经连接</string>
    <string name="usb_connected">USB已连接!</string>
    <string name="usb_mounted">U盘已插入!</string>
    <string name="battery_low">我快没电了，快给我充电吧!</string>
    <string name="mac_connected">话筒已接入!</string>
    <string name="system_settings_items_text_101">七彩耳灯</string>
    <string name="system_settings_items_text_102">护眼设置</string>
    <string name="system_settings_items_text_103">音量设置</string>
    <string name="system_settings_items_text_104">自动关机</string>
    <string name="system_settings_items_text_105">防沉迷设置</string>
    <string name="system_settings_items_text_106">日期与时间</string>
    <string name="system_settings_items_text_107">高级</string>
    <string name="system_settings_items_text_108">意见反馈</string>
    <string name="system_settings">系统设置</string>
    <string name="commit">提交</string>
    <string name="never">从不</string>
    <string name="m_1">1分钟</string>
    <string name="m_5">5分钟</string>
    <string name="m_10">10分钟</string>
    <string name="m_15">15分钟</string>
    <string name="m_20">20分钟</string>
    <string name="m_30">30分钟</string>
    <string name="m_40">40分钟</string>
    <string name="m_60">60分钟</string>
    <string name="m_120">120分钟</string>
    <string name="color_ear">七彩耳灯</string>
    <string name="screen_brightness">屏幕亮度</string>
    <string name="protect_eye_senser">护眼传感器</string>
    <string name="protect_eye_blue_light">防蓝光护眼</string>
    <string name="protect_eye_blue_light_note">说明：防蓝光护眼开启后，蓝光将大幅滤除，屏幕显示将会偏黄，变得柔和，\n这是正常现象，如希望更好的色显，可关闭防蓝光护眼。</string>
    <string name="regular_rest">定时休息</string>
    <string name="regular_rest_title">定时休息</string>
    <string name="regular_rest_note">说明：开启定时休息后，到设定时间后将锁屏1分钟。</string>
    <string name="regular_rest_dialog_note">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;启用定时休息功能需要开启密码，您尚未启动密码。</string>
    <string name="max_volume_title">限制最大音量值</string>
    <string name="power_off_max_volume_title">限制开机最大音量值</string>
    <string name="power_off_max_volume_note">说明：限制最大音量后，可避免宝宝将音量调得很大，从而保护宝宝的听力。</string>
    <string name="screen_dormancy">屏幕休眠</string>
    <string name="auto_shutdown">自动关机</string>
    <string name="auto_shutdown_note">说明：开启自动关机后，检测到一定时间内无操作将自动关机，节省电能</string>
    <string name="timing_shutdown">定时关机</string>
    <string name="timing_shutdown_note">说明：开启定时关机后，到设定时间后将自动关机</string>
    <string name="enable_password">启用密码</string>
    <string name="modify_password">更改密码</string>
    <string name="password_remind">密码提醒</string>
    <string name="reset_password_success">初始化密码成功，默认密码：0000</string>
    <string name="password_remind_note">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;如忘记密码，可以尝试连续点击8次删除键初始化密码，初始密码为\"0000\"。</string>
    <string name="modify_password_note">说明：初始密码为0000</string>
    <string name="fcm_switch">防沉迷开关</string>
    <string name="fcm_switch_note">说明：开启防沉迷开关后，开机后需要输入密码才能使用</string>
    <string name="timing_locking">定时锁定</string>
    <string name="timing_locking_note">说明：开启定时锁定后，到设定时间后将自动锁定屏幕，不能继续使用</string>
    <string name="input_new_pwd">输入新密码</string>
    <string name="input_agin_new_pwd">再次输入新密码</string>
    <string name="modify_pwd_ok">修改密码成功，请记住你的密码是：</string>
    <string name="input_old_pwd">输入原始密码</string>
    <string name="input_pwd_error">密码输入错误</string>
    <string name="synchronization_time">自动同步网络时间</string>
    <string name="set_date">设置日期</string>
    <string name="set_time">设置时间</string>
    <string name="set_time_fail">设置失败，建议自动同步网络时间！</string>
    <string name="set_time_success">设置成功！</string>
    <string name="yesr">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="device_model">型号</string>
    <string name="firmware_version">固件版本</string>
    <string name="firmware_update">固件升级</string>
    <string name="firmware_version_update">( 有新版本 [update] )</string>
    <string name="firmware_version_update_note">升级时请保证电量在50%以上，升级过程中请勿关机操作。</string>
    <string name="firmware_version_update_currentversion">当前版本：</string>
    <string name="updating">正在升级</string>
    <string name="update_one_key">一键升级</string>
    <string name="immediately_reboot">立即重启</string>
    <string name="update_success">升级成功！请点击按钮重启或者稍后手动重启。</string>
    <string name="requst_system_settings">请输入密码</string>
    <string name="free_capacity">内置存储剩余空间</string>
    <string name="file_manager">文件管理器</string>
    <string name="factory_setting">恢复出厂设置</string>
    <string name="factory_setting_note">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;恢复出厂设置会将设备恢复到刚出厂时的状态，您的数据、账号、文档、照片和视频等数据将被删除，请谨慎操作。</string>
    <string name="recover">恢复</string>
    <string name="feedback_note">我对火火兔视频机的建议：</string>
    <string name="feedback_commit_hint">火火兔的成长离不开您的支持，您宝贵的建议，可以让我们做得更好。</string>
    <string name="wifi_setting">WIFI设置</string>
    <string name="wifi">WLNA</string>
    <string name="wifi_name">WIFI名称</string>
    <string name="status">状态</string>
    <string name="ip_address">IP地址:</string>
    <string name="mac">MAC:</string>
    <string name="manually_add_network">手动添加网络</string>
    <string name="connect_network">连接网络</string>
    <string name="dialog_net_name">网络名称：</string>
    <string name="dialog_net_pwd">密码：</string>
    <string name="verification_fail">连接失败!</string>
    <string name="wifi_enable">没有打开网络！</string>
    <string name="has_saved">(已保存)</string>
    <string name="ignore_network">忽略网络</string>
    <string name="scnnering">正在检测......</string>
    <string name="scnnered">扫描完成</string>
    <string name="not_available_wifi">没有可用WIFI</string>
    <string name="disconnected">断开连接！</string>
    <string name="hht_xt_item_name_101">早教英语</string>
    <string name="hht_xt_item_name_102">早教学堂</string>
    <string name="hht_xt_item_name_103">数学逻辑</string>
    <string name="hht_xt_item_name_104">传统国学</string>
    <string name="hht_xt_item_name_105">多元智能</string>
    <string name="hht_xt_item_name_106">安全知识</string>
    <string name="hht_xt_zjyy">早教英语</string>
    <string name="hht_xt_zjyy_bnyy">邦尼英语</string>
    <string name="hht_xt_zjyy_bnyy_01">01.Hello，hello，how are you</string>
    <string name="hht_xt_zjyy_bnyy_02">02.Where is Bunny</string>
    <string name="hht_xt_zjyy_bnyy_03">03.Boy and girl</string>
    <string name="hht_xt_zjyy_bnyy_04">04.Stand up，sit down</string>
    <string name="hht_xt_zjyy_bnyy_05">05.Wash your hands</string>
    <string name="hht_xt_zjyy_bnyy_06">06.Nice food</string>
    <string name="hht_xt_zjyy_bnyy_07">07.I see</string>
    <string name="hht_xt_zjyy_bnyy_08">08.What\'s this</string>
    <string name="hht_xt_zjyy_bnyy_09">09.A candy for you</string>
    <string name="hht_xt_zjyy_bnyy_10">10.One potato</string>
    <string name="hht_xt_zjyy_bnyy_11">11.Happy happy happy</string>
    <string name="hht_xt_zjyy_bnyy_12">12.Shake shake shake</string>
    <string name="hht_xt_zjyy_bnyy_13">13.Which one do you like</string>
    <string name="hht_xt_zjyy_bnyy_14">14.Who can do it</string>
    <string name="hht_xt_zjyy_bnyy_15">15.I want</string>
    <string name="hht_xt_zjyy_bnyy_16">16.Traffic lights</string>
    <string name="hht_xt_zjyy_bnyy_17">17.How do you feel？</string>
    <string name="hht_xt_zjyy_bnyy_18">18.Mid-Autumn Day</string>
    <string name="hht_xt_zjyy_bnyy_19">19.Taste</string>
    <string name="hht_xt_zjyy_bnyy_20">20.What are you wearing？</string>
    <string name="hht_xt_zjyy_bnyy_21">21.I see you</string>
    <string name="hht_xt_zjyy_bnyy_22">22.Music man</string>
    <string name="hht_xt_zjyy_bnyy_23">23.Rain</string>
    <string name="hht_xt_zjyy_bnyy_24">24.Merry Christmas</string>
    <string name="hht_xt_zjyy_bnyy_25">25.What shape is it</string>
    <string name="hht_xt_zjyy_bnyy_26">26.Numbers</string>
    <string name="hht_xt_zjyy_bnyy_27">27.Fly a kite</string>
    <string name="hht_xt_zjyy_bnyy_28">28.Is it yours</string>
    <string name="hht_xt_zjyy_bnyy_29">29.Three bears</string>
    <string name="hht_xt_zjyy_bnyy_30">30.At home</string>
    <string name="hht_xt_zjyy_bnyy_31">31.It\'s too hot</string>
    <string name="hht_xt_zjyy_bnyy_32">32.Who is coming</string>
    <string name="hht_xt_zjyy_bnyy_33">33.A busy day</string>
    <string name="hht_xt_zjyy_bnyy_34">34.Little rabbits</string>
    <string name="hht_xt_zjyy_bnyy_35">35.Can i help you</string>
    <string name="hht_xt_zjyy_bnyy_36">36.Three little pigs</string>
    <string name="hht_xt_zjyy_bnyy_37">37.I am a bus</string>
    <string name="hht_xt_zjyy_bnyy_38">38.Bingo</string>
    <string name="hht_xt_zjyy_bnyy_39">39.Five little monkeys</string>
    <string name="hht_xt_zjyy_bnyy_40">40.Chinese new year</string>
    <string name="hht_xt_zjyy_bnyy_41">41.Fun to play</string>
    <string name="hht_xt_zjyy_bnyy_42">42.Rabbit and tortoise</string>
    <string name="hht_xt_zjyy_bnyy_43">43.What is your favorite sport</string>
    <string name="hht_xt_zjyy_bnyy_44">44.Bear`s teeth</string>
    <string name="hht_xt_zjyy_bnyy_45">45.Happy mother`s day</string>
    <string name="hht_xt_zjyy_bnyy_46">46.A big radish in the hole</string>
    <string name="hht_xt_zjyy_bnyy_47">47.The muffin man</string>
    <string name="hht_xt_zjyy_bnyy_48">48.Goodbye</string>
    <string name="hht_xt_zjyy_dnyy">多纳英语</string>
    <string name="hht_xt_zjyy_dnyy_01">01.早上好</string>
    <string name="hht_xt_zjyy_dnyy_02">02.我是</string>
    <string name="hht_xt_zjyy_dnyy_03">03.美味的水果</string>
    <string name="hht_xt_zjyy_dnyy_04">04.我们数数</string>
    <string name="hht_xt_zjyy_dnyy_05">05.剪刀石头布</string>
    <string name="hht_xt_zjyy_dnyy_06">06.捉迷藏</string>
    <string name="hht_xt_zjyy_dnyy_07">07.穿上衣服</string>
    <string name="hht_xt_zjyy_dnyy_08">08.生日快乐</string>
    <string name="hht_xt_zjyy_dnyy_09">09.我涂了</string>
    <string name="hht_xt_zjyy_dnyy_10">10.你喜欢什么颜色</string>
    <string name="hht_xt_zjyy_dnyy_11">11.去动物园</string>
    <string name="hht_xt_zjyy_dnyy_12">12.可爱的动物</string>
    <string name="hht_xt_zjyy_bdyy">宝狄英语</string>
    <string name="hht_xt_zjyy_bdyy_01">01.Bodhis_ABC</string>
    <string name="hht_xt_zjyy_bdyy_02">02.A_Day_at_Cafe_Sambolo_1</string>
    <string name="hht_xt_zjyy_bdyy_03">03.All_These_Shapes1</string>
    <string name="hht_xt_zjyy_bdyy_04">04.America_Song</string>
    <string name="hht_xt_zjyy_bdyy_05">05.Around_My_Rooms</string>
    <string name="hht_xt_zjyy_bdyy_06">06.Asia_Song</string>
    <string name="hht_xt_zjyy_bdyy_07">07.Better_Weather</string>
    <string name="hht_xt_zjyy_bdyy_08">08.Body_Bop</string>
    <string name="hht_xt_zjyy_bdyy_09">09.Check_out_my_toy</string>
    <string name="hht_xt_zjyy_bdyy_10">10.City_Life_City_Lights</string>
    <string name="hht_xt_zjyy_bdyy_11">11.Clean_and_Green</string>
    <string name="hht_xt_zjyy_bdyy_12">12.Colourful_Party</string>
    <string name="hht_xt_zjyy_bdyy_13">13.Count_on_You</string>
    <string name="hht_xt_zjyy_bdyy_14">14.Count_with_Bodhi</string>
    <string name="hht_xt_zjyy_bdyy_15">15.Day_and_Night</string>
    <string name="hht_xt_zjyy_bdyy_16">16.Dream_Team.mp4</string>
    <string name="hht_xt_zjyy_bdyy_17">17.Dress_You_Up</string>
    <string name="hht_xt_zjyy_bdyy_18">18.Everyday_Heroes</string>
    <string name="hht_xt_zjyy_bdyy_19">19.Face_It</string>
    <string name="hht_xt_zjyy_bdyy_20">20.Family</string>
    <string name="hht_xt_zjyy_bdyy_21">21.Food</string>
    <string name="hht_xt_zjyy_bdyy_22">22.Friends_Forever</string>
    <string name="hht_xt_zjyy_bdyy_23">23.Full_Circle</string>
    <string name="hht_xt_zjyy_bdyy_24">24.Fun_Family_Day</string>
    <string name="hht_xt_zjyy_bdyy_25">25.Future_of_the_World</string>
</resources>