<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@mipmap/bg_dialog_settings_setdate">

    <TextView
        android:id="@+id/dialog_title"
        style="@style/Stlye_setting_wifi_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="16dp"
        android:text="@string/ignore_network" />

    <FrameLayout
        android:id="@+id/dialog_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="162dp" />

    <Button
        android:id="@+id/dialog_left"
        style="@style/Stlye_setting_wifi_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/select_settings_btn"
        android:text="@string/ignore" />

    <Button
        android:id="@+id/dialog_right"
        style="@style/Stlye_setting_wifi_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="88dp"
        android:layout_toEndOf="@+id/dialog_left"
        android:background="@drawable/select_settings_wifi_right"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/dialog_middle"
        style="@style/Stlye_setting_wifi_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginTop="302dp"
        android:background="@drawable/select_settings_wifi_right"
        android:text="@string/cancel" />

</RelativeLayout>
